# bgm-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/lofi_bot/: __main__.py  app.py  config.py  test_app.py  test_config.py
src/lofi_bot/core/: database.py  test_database.py
src/lofi_bot/features/catalog/: categories.py  jamendo.py  models.py  repository.py  scheduler.py  service.py  test_categories.py  test_jamendo.py  test_repository.py  test_service.py
src/lofi_bot/features/discord_ui/: bot.py  test_bot.py  test_views.py  views.py
src/lofi_bot/features/guild_settings/: repository.py  test_repository.py
src/lofi_bot/features/join_announcements/: __init__.py  client.py  test_client.py
src/lofi_bot/features/playback/: announcement_mixer.py  manager.py  player.py  test_announcement_mixer.py  test_manager.py  test_player.py
