[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lofi-bot"
version = "0.1.0"
description = "Discord VC bot that plays top Jamendo tracks by ranking category."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.9,<4",
  "asyncpg>=0.29,<1",
  "discord.py[voice]>=2.4,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lofi_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
